--- a/addon/templates/components/photo-swipe.hbs
+++ b/addon/templates/components/photo-swipe.hbs
@@ -1,3 +1,5 @@
+{{yield this}}
+
 {{!-- Root element of PhotoSwipe. Must have class pswp. --}}
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
@@ -34,6 +36,12 @@
 
                 <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
+                {{#if additionalButtons}}
+                  {{#each additionalButtons as |button|}}
+                    <button class="pswp__button pswp__button--{{button.name}}" title={{button.title}}></button>
+                  {{/each}}
+                {{/if}}
+
                 {{!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR --}}
                 {{!-- element will get class pswp__preloader--active when preloader is running --}}
                 <div class="pswp__preloader">
@@ -62,4 +70,3 @@
     </div>
 </div>
 
-{{yield this}}
